...

import UIKit

class FindBeerView: UIViewController, LoadingViewProtocol {
    
    // MARK: - Outlets
    @IBOutlet weak var beersTableView: UITableView!
    
    // MARK: - Vars
    var viewModel: FindBeerViewModelProtocol?
    var presenter: FindBeerPresenterContract?
    var searchBar: UISearchBar?
    lazy var loadingView: UIView =  LoadingView.instantiate(on: self.view)
    
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        self.presenter?.viewDidLoad()
...
